# mpr

./: .gitignore  .gitmodules  DRAFTPOST.md  LICENSE  LICENSE.html  LICENSE.md  Makefile  PUBMOVE.md  README.md  SPEEDUP.md  draftpost.py  move-from-submodule.sh  pelicanconf.py  publishconf.py  pubmove.sh  pyproject.toml  requirements.txt  tasks.py
.claude/: settings.json
caddy/: Caddyfile
content/: 0-5-billion-rows.md  1-1-billion-taxi-rides-on-brytlytdb.md  1-atbat12.md  1-billion-tweets.md  10-years-after-the-malice.md  100_days_fabric.md  100_million_hours.md  1080p-apple-tv.md  1_cent_books_on_amazon.md  1password-banishment.md  1password_chrome_alpha.md  1password_touch.md  1password_touch_syncing.md  2-mrjob-thoughts.md  20-mile-marchin.md  2000-calories.md  2009_todo_a_proper_burial_nmh.md  2009_todo_blog_more.md  2009_todo_learn_clojure.md  2009_todo_more_exercise_less_w.md  2016-07-22.md  2023_works_completed_01.md  250k-more-tweets.md  250k-tweets.md  25_years_of_neuromancer.md  26_for_31.md  28_for_30.md  28_for_31.md  2_fast_2_furious_guilty_pleasu.md  2mm-lines.md  3-out-of-5.md  40-posts-per.md  40_virgin_mifi.md  44.md  4425.md  4_years_without_a_desktop.md  4g_in_dc.md  4g_mobile_hotspot.md  4k-monitor-buyers-guide.md  5-billion-pages.md  (+1846 more)
content/pages/: search.md
content/static/: robots.txt
plugins/: archive_data.py
