[project]
name = "mpr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markdown<3.2",
    "pelican>=4.11.0",
    "pelican-drafts>=0.1.1",
    "pyembed",
    "pyembed-markdown>=1.1.0",
    "setuptools>=76.0.0",
    "smartypants>=2.0.1",
    "typogrify>=2.1.0",
]

[tool.uv.sources]
pyembed = { git = "https://github.com/jaywink/pyembed.git" }
