[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mpr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.7",
    "pagefind[bin]>=1.3.0",
    "pelican>=4.11.0",
    "pelican-drafts>=0.1.1",
    "pelican-yaml-metadata>=2.1.2",
    "pyembed",
    "pyembed-markdown>=1.1.0",
    "setuptools>=76.0.0",
    "smartypants>=2.0.1",
    "typogrify>=2.1.0",
]

[tool.uv.sources]
pyembed = { git = "https://github.com/jaywink/pyembed.git" }
pyembed-markdown = { git = "https://github.com/crossjam/pyembed-markdown.git" }

[tool.uv]
package = false
